# Relevos_2015V1

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  NaoMovement.cpp  NaoMovement.h  NaoVision.cpp  NaoVision.h  bumper.cpp  bumper.h  main.cpp  manifest.json  qiproject.xml
build-naoqi64/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake  relevos.cbp
build-naoqi64/sdk/share/qi/: path.conf
build-sys-linux-x86_64/: CMakeCache.txt
build-sys-linux-x86_64/sdk/share/qi/: path.conf
